content/products/searchlight/5.0.0/reference/searchlight/searchlight.md
---
title: Searchlight
menu:
  product_searchlight_5.0.0:
    identifier: searchlight
    name: Searchlight
    parent: searchlight-cli
    weight: 0
product_name: searchlight
section_menu_id: reference
menu_name: product_searchlight_5.0.0
url: /products/searchlight/5.0.0/reference/searchlight/
aliases:
- /products/searchlight/5.0.0/reference/searchlight/searchlight/
info:
  version: 5.0.0
---

## searchlight

Searchlight by AppsCode - Alerts for Kubernetes

### Synopsis

Searchlight by AppsCode - Alerts for Kubernetes

### Options

```
      --allow_verification_with_non_compliant_keys   Allow a SignatureVerifier to use keys which are technically non-compliant with RFC6962.
      --alsologtostderr                              log to standard error as well as files
      --analytics                                    Send analytical events to Google Analytics (default true)
  -h, --help                                         help for searchlight
      --log_backtrace_at traceLocation               when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                               If non-empty, write log files in this directory
      --logtostderr                                  log to standard error instead of files (default true)
      --stderrthreshold severity                     logs at or above this threshold go to stderr (default 2)
  -v, --v Level                                      log level for V logs
      --vmodule moduleSpec                           comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [searchlight configure](/products/searchlight/5.0.0/reference/searchlight/searchlight_configure)	 - Generate icinga configuration
* [searchlight run](/products/searchlight/5.0.0/reference/searchlight/searchlight_run)	 - Run operator
* [searchlight version](/products/searchlight/5.0.0/reference/searchlight/searchlight_version)	 - Prints binary version number.


